# plonkish-fibonacci-sample

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
circuit/: Cargo.toml
circuit/src/: circuit.rs  io.rs  lib.rs  serialisation.rs
gemini/: Cargo.toml
gemini/src/: lib.rs
gemini/tests/: integration_test.rs
hyperplonk/: Cargo.toml
hyperplonk/src/: lib.rs
hyperplonk/tests/: integration_test.rs
plonk/: Cargo.toml  hermez-raw-4
plonk/src/: lib.rs
plonk/tests/: integration_test.rs
src/: circuit.rs  io.rs  lib.rs  serialisation.rs
tests/: integration_test.rs
