[workspace]
[package]
name = "halo2-fibonacci"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gen-keys"
path = "src/bin/gen_keys.rs"

[features]

dev-graph = ["halo2_proofs/dev-graph", "plotters"]

[dependencies]
halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves", tag = "0.3.2" }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_04_20" }
plotters = {version = "0.3.6", optional = true}
serde = { version = "1.0.204", features = ["derive"] }
bincode = "1.3.3"
rand = "0.8.5"
thiserror = "1.0.62"

[dev-dependencies]
serde_json = "1.0.120"
once_cell = "1.19.0"