[package]
name = "fibonacci-circuit"
version = "0.1.0"
edition = "2021"

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]
default = ["frontend-halo2"]

frontend-halo2 = ["dep:halo2_proofs"]

[dependencies]
halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves", tag = "0.3.3" }
plotters = {version = "0.3.6", optional = true}
serde = { version = "1.0.204", features = ["derive"] }
bincode = { workspace = true }
rand = "0.8.5"
thiserror = "^1.0"
plonkish_backend = { git = "https://github.com/sifnoc/plonkish", branch = "setup_custom", features = ["frontend-halo2", "benchmark"] }
halo2_proofs = { git = "https://github.com/han0110/halo2.git", branch = "feature/for-benchmark", optional = true }
itertools = "0.13.0"

[dev-dependencies]
serde_json = "1.0.120"
once_cell = "1.19.0"
