[package]
name = "gemini-fibonacci"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gen-keys"
path = "src/bin/gen_gemini_keys.rs"

[dependencies]
fibonacci-circuit = { path = "../circuit" }
halo2_proofs = { workspace = true }
plonkish_backend = { workspace = true }
halo2curves = { workspace = true }
